; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_in_pcb.c_in_pcbinfo_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_in_pcb.c_in_pcbinfo_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inpcbinfo = type { i32, i32, i8*, i32, i8*, i32, i8*, i64, %struct.inpcbhead*, i32 }
%struct.inpcbhead = type { i32 }

@IPPORT_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [12 x i8] c"pcbinfohash\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"pcbinfolist\00", align 1
@M_PCB = common dso_local global i32 0, align 4
@inpcb_fini = common dso_local global i32 0, align 4
@UMA_ALIGN_PTR = common dso_local global i32 0, align 4
@maxsockets = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [34 x i8] c"kern.ipc.maxsockets limit reached\00", align 1
@curvnet = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @in_pcbinfo_init(%struct.inpcbinfo* %0, i8* %1, %struct.inpcbhead* %2, i32 %3, i32 %4, i8* %5, i32 %6, i32 %7) #0 {
  %9 = alloca %struct.inpcbinfo*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.inpcbhead*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.inpcbinfo* %0, %struct.inpcbinfo** %9, align 8
  store i8* %1, i8** %10, align 8
  store %struct.inpcbhead* %2, %struct.inpcbhead** %11, align 8
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i8* %5, i8** %14, align 8
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %17 = load i32, i32* %13, align 4
  %18 = load i64, i64* @IPPORT_MAX, align 8
  %19 = add nsw i64 %18, 1
  %20 = call i32 @imin(i32 %17, i64 %19)
  store i32 %20, i32* %13, align 4
  %21 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %22 = load i8*, i8** %10, align 8
  %23 = call i32 @INP_INFO_LOCK_INIT(%struct.inpcbinfo* %21, i8* %22)
  %24 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %25 = call i32 @INP_HASH_LOCK_INIT(%struct.inpcbinfo* %24, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %26 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %27 = call i32 @INP_LIST_LOCK_INIT(%struct.inpcbinfo* %26, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0))
  %28 = load %struct.inpcbhead*, %struct.inpcbhead** %11, align 8
  %29 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %30 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %29, i32 0, i32 8
  store %struct.inpcbhead* %28, %struct.inpcbhead** %30, align 8
  %31 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %32 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %31, i32 0, i32 8
  %33 = load %struct.inpcbhead*, %struct.inpcbhead** %32, align 8
  %34 = call i32 @CK_LIST_INIT(%struct.inpcbhead* %33)
  %35 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %36 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %35, i32 0, i32 7
  store i64 0, i64* %36, align 8
  %37 = load i32, i32* %12, align 4
  %38 = load i32, i32* @M_PCB, align 4
  %39 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %40 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %39, i32 0, i32 5
  %41 = call i8* @hashinit(i32 %37, i32 %38, i32* %40)
  %42 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %43 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %42, i32 0, i32 6
  store i8* %41, i8** %43, align 8
  %44 = load i32, i32* %13, align 4
  %45 = load i32, i32* @M_PCB, align 4
  %46 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %47 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %46, i32 0, i32 3
  %48 = call i8* @hashinit(i32 %44, i32 %45, i32* %47)
  %49 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %50 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %49, i32 0, i32 4
  store i8* %48, i8** %50, align 8
  %51 = load i32, i32* %13, align 4
  %52 = load i32, i32* @M_PCB, align 4
  %53 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %54 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %53, i32 0, i32 1
  %55 = call i8* @hashinit(i32 %51, i32 %52, i32* %54)
  %56 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %57 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %56, i32 0, i32 2
  store i8* %55, i8** %57, align 8
  %58 = load i8*, i8** %14, align 8
  %59 = load i32, i32* %15, align 4
  %60 = load i32, i32* @inpcb_fini, align 4
  %61 = load i32, i32* @UMA_ALIGN_PTR, align 4
  %62 = call i32 @uma_zcreate(i8* %58, i32 4, i32* null, i32* null, i32 %59, i32 %60, i32 %61, i32 0)
  %63 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %64 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %63, i32 0, i32 0
  store i32 %62, i32* %64, align 8
  %65 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %66 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %65, i32 0, i32 0
  %67 = load i32, i32* %66, align 8
  %68 = load i32, i32* @maxsockets, align 4
  %69 = call i32 @uma_zone_set_max(i32 %67, i32 %68)
  %70 = load %struct.inpcbinfo*, %struct.inpcbinfo** %9, align 8
  %71 = getelementptr inbounds %struct.inpcbinfo, %struct.inpcbinfo* %70, i32 0, i32 0
  %72 = load i32, i32* %71, align 8
  %73 = call i32 @uma_zone_set_warning(i32 %72, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @imin(i32, i64) #1

declare dso_local i32 @INP_INFO_LOCK_INIT(%struct.inpcbinfo*, i8*) #1

declare dso_local i32 @INP_HASH_LOCK_INIT(%struct.inpcbinfo*, i8*) #1

declare dso_local i32 @INP_LIST_LOCK_INIT(%struct.inpcbinfo*, i8*) #1

declare dso_local i32 @CK_LIST_INIT(%struct.inpcbhead*) #1

declare dso_local i8* @hashinit(i32, i32, i32*) #1

declare dso_local i32 @uma_zcreate(i8*, i32, i32*, i32*, i32, i32, i32, i32) #1

declare dso_local i32 @uma_zone_set_max(i32, i32) #1

declare dso_local i32 @uma_zone_set_warning(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
